fixed addition to groups
